--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
 </head>
 
-<body style="background:url('./img/mtn-abstract.jpg');background-size:cover;">
+<body style="background:url('.img/mtn-abstract.jpg');background-size:cover;">
   <div id="app" class="container"></div>
   <div class="footer" style="
     background-color: #262729;
